# anatomind

./: .gitignore  README.md
tg263/: .env  .env.example  README.md  docker-compose.yml
tg263/api/: Cargo.toml  Dockerfile
tg263/api/src/: main.rs
tg263/config/: api.toml
tg263/flask/: Dockerfile  README.md  test_api.py  test_curl.sh
tg263/flask/src/: debug_generation.py  debug_trie.py  inference.py  inference_basic.py  inference_cpu.py  inference_final.py  inference_hybrid.py  inference_improved.py  inference_robust.py  inference_simple.py  main.py
tg263/labels/: TG263.csv
tg263/model/: .gitkeep
tg263/scripts/: contexto  demo.sh  healthcheck.sh  mock_responses.conf  run_curl_examples.sh  test_api.sh  test_final_configs.sh  test_memory_configs.sh  test_optimized.sh  test_p40.sh  test_pascal_compatible.sh  test_tgi30_final.sh  test_tgi_base.sh  test_tgi_versions.sh
tg263/tgi/: Dockerfile  Dockerfile.no-flash
tg263/vllm/: Dockerfile
